# ds-u2-actividad-1b-listasenlazadassimples-ChapaStudent09

./: README.md
proyecto_sensores/: CMakeLists.txt  Doxyfile
proyecto_sensores/html/: annotated.html  annotated_dup.js  classListaGestion-members.html  classListaGestion.html  classListaGestion.js  classListaSensor-members.html  classListaSensor.html  classListaSensor.js  classSensorPresion-members.html  classSensorPresion.html  classSensorPresion.js  classSensorTemperatura-members.html  classSensorTemperatura.html  classSensorTemperatura.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  lista__gestion_8h.html  lista__gestion_8h.js  lista__gestion_8h_source.html  lista__sensores_8h.html  lista__sensores_8h.js  lista__sensores_8h_source.html  main_8cpp.html  navtreedata.js  navtreeindex0.js  sensor__presion_8h.html  sensor__presion_8h.js  sensor__presion_8h_source.html  (+9 more)
proyecto_sensores/include/: lista_gestion.h  lista_sensor.h  sensor_presion.h  sensor_temperatura.h
proyecto_sensores/latex/: annotated.tex  classListaGestion.tex  classListaSensor.tex  classSensorPresion.eps  classSensorPresion.tex  classSensorTemperatura.eps  classSensorTemperatura.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  lista__gestion_8h.tex  lista__gestion_8h_source.tex  lista__sensores_8h.tex  main_8cpp.tex  (+8 more)
(+23 files in other folders)
